fix issue cutting off page

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     rgba(126, 115, 255, 0.48) 100%
   );
   height: 100vh;
-  overflow: hidden;
 }
 body .container > div {
   margin-top: 0 !important;
@@ -20,7 +19,7 @@ body .container > div {
 body .container > div::before {
   content: "";
   display: block;
-  height: 500px;
+  height: 300px;
   background-image: url("https://lh3.googleusercontent.com/ULjfyo4LJhtV3J9K7lu1xh0YZQBa6WHPp-cwlV2C9sUIyTpgSlv554mh_97fRXsziOIu9xwpukl5NQoDbkE3mlXlWR8zU7qcWQsxVg=w388");
   background-repeat: no-repeat;
   background-position: center;
@@ -31,7 +30,7 @@ body .container > div::before {
 
 @media (min-width: 320px) and (max-width: 480px) {
   body .container > div::before {
-    height: 400px;
+    height: 200px;
   }
 }
 
